#[[
This file is part of the Ristra portage project.
Please see the license file at the root of this repository, or at:
    https://github.com/laristra/portage/blob/master/LICENSE
]]

add_subdirectory(support)
add_subdirectory(distributed)
add_subdirectory(search)
add_subdirectory(intersect)
add_subdirectory(interpolate)
add_subdirectory(accumulate)
add_subdirectory(estimate)
add_subdirectory(swarm)
add_subdirectory(driver)
